deploy/deployment-bert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpops
  labels:
    name: cpops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpops
  namespace: cpops
  labels:
    app: cpops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cpops
  template:
    metadata:
      labels:
        app: cpops
    spec:
      containers:
      - name: cpops
        image: ravenvanhove/cp-ops:latest
---
apiVersion: v1
kind: Service
metadata:
  name: cpops
  namespace: cpops
spec:
  selector:
    app: cpops
  ports:
    - port: 31987
      targetPort: 31987
  type: LoadBalancer
