deploy/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpops
  labels:
    name: cpops
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cpops
  name: cpops
  namespace: cpops
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.82.160
  clusterIPs:
  - 10.43.82.160
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30823
    port: 31987
    protocol: TCP
    targetPort: 31987
  selector:
    app: cpops
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.129.28
      ipMode: VIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpops
  labels:
    app: cpops
  namespace: cpops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cpops
  template:
    metadata:
      labels:
        app: cpops
    spec:
      containers:
      - name: cpops
        image: ravenvanhove/cp-ops:latest
        # ports:
        # - containerPort: 31987
        #   name: http-web-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpops
  namespace: cpops
spec:
  rules:
    - host: hello.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpops
                port:
                  number: 31987
